<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:gravity="center_horizontal"
    tools:context="com.quatropdois.acaodocoracao.AAcaoActivity" >    

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-8073268566643671/6237372741"/>

    <ScrollView
        android:id="@+id/VerticalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@+id/adView">
            
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_height="fill_parent"
                    android:layout_margin="0dp" >

                    <TextView
                        android:id="@+id/editTextTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="5dp"
                        android:scrollHorizontally="false"
                        android:text="Ação do Coração"
                        android:textColor="@color/CorDeTexto"
                        android:textSize="30sp" />

				</TableRow>
				                
                <TableRow
                    android:layout_height="fill_parent"
                    android:layout_margin="0dp" >

                    <TextView
                        android:id="@+id/editText1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:gravity="center"
                        android:paddingBottom="5dp"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:paddingTop="5dp"
                        android:scrollHorizontally="false"
                        android:text="@string/texto_aAcao_1"
                        android:textColor="@color/CorDeTexto"
                        android:textSize="15sp" />

				</TableRow>
				
				<TableRow
                    android:layout_height="fill_parent"
                    android:layout_margin="0dp" >            
                    
        			<TextView
        			    android:id="@+id/editText2"
        			    android:layout_width="wrap_content"
        			    android:layout_height="wrap_content"
        			    android:ems="10"
        			    android:gravity="center"
        			    android:paddingBottom="5dp"
        			    android:paddingLeft="15dp"
        			    android:paddingRight="15dp"
        			    android:paddingTop="5dp"
        			    android:scrollHorizontally="false"
        			    android:text="@string/texto_aAcao_2"
        			    android:textColor="@color/CorDeTexto"
        			    android:textSize="15sp" >
					</TextView>					
				</TableRow>
		
				<TableRow
                    android:layout_height="fill_parent"
                    android:layout_margin="0dp" >            
                    
        			<TextView
        			    android:id="@+id/editText3"
        			    android:layout_width="wrap_content"
        			    android:layout_height="wrap_content"
        			    android:ems="10"
        			    android:gravity="center"
        			    android:paddingBottom="5dp"
        			    android:paddingLeft="15dp"
        			    android:paddingRight="15dp"
        			    android:paddingTop="5dp"
        			    android:scrollHorizontally="false"
        			    android:text="@string/texto_aAcao_3"
        			    android:textColor="@color/CorDeTexto"
        			    android:textSize="15sp" >
					</TextView>					
				</TableRow>
			</TableLayout>
    </ScrollView>                

</RelativeLayout>



                    